added new photoes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 
 <style>
+    p {
+        font-size: 14pt;
+    }
     body {
         margin-left: 3pt;
     }
@@ -35,14 +38,9 @@
     </p>
 
     <h2>
-
-    <h2>
         Структура таблиц
     </h2>
     <img src="img/table structure.jpg">
-    <p>
-        
-    </p>
 
     <h2>
         Вставляем в таблицу programming_language все языки программирования из формы
@@ -51,5 +49,16 @@
     <p>
         Для этого используем команду INSERT INTO имя таблицы (имена полей) VALUES (значения);
     </p>
+
+    <h2>
+        После отправки анкеты данные сохраняются в базу данных
+    </h2>
+    <img src="img/form results.jpg">
+
+    <h2>
+        Их можно удалить командой DELETE
+    </h2>
+    <img src="img/deletion.jpg">
+
 </body>
 </html>
